# my_dream_notebook_editor_

./: .gitignore  README.md  package-lock.json  package.json  test.sdb
alghorim_compression/: Cargo.toml
alghorim_compression/src/: main.rs
src/: App.css  App.tsx  Mark.css  Mark.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/alghorim_compression/: Cargo.toml
src-tauri/alghorim_compression/src/: main.rs
src-tauri/src/: file_system.rs  main.rs
stion/: Cargo.toml  Dioxus.toml
stion/src/: main.rs
stion/src/database/: file_existing.rs  file_reader.rs  file_write.rs  mod.rs
