[package]
name = "stion"
version = "0.1.0"
authors = ["Jormungand <diojormungand@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#DIOXUS ALL
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-logger = "0.5.1"
#JSON worked
serde = "1.0.210"
serde_json = "1.0.128"
#MULTYTHREAD
tokio = "1.40.0"